--- a/zenobot/src/app/globals.css
+++ b/zenobot/src/app/globals.css
@@ -71,6 +71,19 @@ body {
   }
 }
 
+@layer utilities {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+    appearance: textfield;
+  }
+}
+
 @layer base {
   * {
     @apply border-border;
